# vale.sh

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  vale-implementation-plan.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/vale-adapters/: Cargo.toml
crates/vale-adapters/python/: vectorbt_runner.py
crates/vale-adapters/src/: adapter.rs  doctor.rs  lean.rs  lib.rs  openbb.rs  python_bridge.rs  quantlib.rs  vectorbt.rs
crates/vale-backtest/: Cargo.toml
crates/vale-backtest/benches/: backtest_bench.rs
crates/vale-backtest/src/: commission.rs  context.rs  engine.rs  lib.rs  order.rs  portfolio.rs  slippage.rs  strategy.rs
crates/vale-backtest/src/strategies/: buy_and_hold.rs  mod.rs  sma_crossover.rs
crates/vale-backtest/tests/: backtest_engine.rs
crates/vale-cli/: Cargo.toml
crates/vale-cli/src/: cli.rs  main.rs  strategy.rs  theme.rs
crates/vale-cli/src/commands/: backtest.rs  config.rs  data.rs  doctor.rs  factor.rs  mod.rs  portfolio.rs  price.rs  report.rs  risk.rs  strategy.rs  sweep.rs  watch.rs
crates/vale-cli/src/ui/: mod.rs  sweep_dashboard.rs  watch_dashboard.rs
crates/vale-cli/tests/: cli_smoke.rs
crates/vale-core/: Cargo.toml
crates/vale-core/src/: cache.rs  config.rs  error.rs  lib.rs  resolution.rs  types.rs
crates/vale-data/: Cargo.toml
crates/vale-data/src/: alpaca_market.rs  cache_layer.rs  lib.rs  local.rs  local_dir.rs  polars_export.rs  polygon.rs  provider.rs  yahoo.rs
crates/vale-factor/: Cargo.toml
crates/vale-factor/src/: fama_french.rs  ic.rs  lib.rs  regression.rs
crates/vale-indicators/: Cargo.toml
crates/vale-indicators/src/: lib.rs  native.rs  talib.rs
crates/vale-portfolio/: Cargo.toml
crates/vale-portfolio/src/: backtest.rs  black_litterman.rs  frontier.rs  frontier_export.rs  lib.rs  native.rs  skfolio.rs  weights.rs
crates/vale-portfolio/tests/: skfolio_methods.rs
crates/vale-price/: Cargo.toml
crates/vale-price/src/: blackscholes.rs  bond.rs  implied_vol.rs  lib.rs
crates/vale-report/: Cargo.toml
crates/vale-report/src/: chart.rs  csv.rs  html.rs  json.rs  lib.rs  stats.rs  table.rs  tearsheet.rs
crates/vale-risk/: Cargo.toml
crates/vale-risk/src/: correlation.rs  drawdown.rs  lib.rs  metrics.rs  stress.rs
crates/vale-risk/tests/: risk_metrics.rs
crates/vale-sweep/: Cargo.toml
crates/vale-sweep/src/: checkpoint.rs  grid.rs  lib.rs  result.rs  runner.rs
crates/vale-watch/: Cargo.toml
crates/vale-watch/src/: broker.rs  dashboard.rs  lib.rs
docs/: vale.schema.json
scripts/: install.sh
tests/fixtures/: equity.csv
