[package]
name = "vale-adapters"
version = "0.0.2"
edition = "2021"

[features]
default = ["lean", "vectorbt"]
lean = []
vectorbt = []

[dependencies]
vale-core = { path = "../vale-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
