[package]
name = "vale-adapters"
version = "1.0.0"
edition = "2021"

[features]
default = ["lean", "vectorbt"]
lean = []
vectorbt = []
openbb = []
quantlib = []
pyo3 = ["dep:pyo3"]

[dependencies]
vale-core = { path = "../vale-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
pyo3 = { workspace = true, optional = true }
