[package]
name = "vale-backtest"
version = "1.0.0"
edition = "2021"

[dependencies]
vale-core = { path = "../vale-core" }
vale-risk = { path = "../vale-risk" }
vale-indicators = { path = "../vale-indicators" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[[bench]]
name = "backtest_bench"
harness = false

[dev-dependencies]
criterion = "0.5"
