[package]
name = "vale-core"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
polars = { workspace = true }
sled = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
num_cpus = { workspace = true }
