[package]
name = "vale-data"
version = "0.0.1"
edition = "2021"

[dependencies]
vale-core = { path = "../vale-core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
csv = "1.3"

[dev-dependencies]
httpmock = "0.7"
tokio = { workspace = true }
