[package]
name = "vale-portfolio"
version = "0.0.2"
edition = "2021"

[dependencies]
vale-core = { path = "../vale-core" }
vale-risk = { path = "../vale-risk" }
vale-backtest = { path = "../vale-backtest" }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
