[package]
name = "vale-sweep"
version = "1.0.0"
edition = "2021"

[dependencies]
vale-core = { path = "../vale-core" }
vale-backtest = { path = "../vale-backtest" }
rayon = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
